<resources>
    <string name="app_name">BookStoreApp</string>
    <string name="title">Book Store App</string>
    <string name="signature">Project By Azzum</string>
    <string name="insert">insert</string>
    <string name="insertDummyData">Insert Dummy Data</string>
    <string name="del">Delete All</string>
    <string name="query_supp">Query Supplier</string>
    <string name="query_prod">Query Product</string>
    <string name="category_overview">Overview</string>
    <string name="hint_book_name">Book Name</string>
    <string name="hint_book_price">£0.0</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="hint_supp_name">name</string>
    <string name="supplier_phone">Supplier Phone:</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="price">Price:</string>
    <string name="namebooklabel">Name:</string>
    <string name="editor_insert_book_failed">Error inserting book</string>
    <string name="editor_insert_book_successful">Book successfully stored</string>
    <string name="edit_activity_title_new_book">Add a Book</string>
    <string name="phone_number_hint">phone number</string>
    <string name="empty_view_title_text">No Books OMG!</string>
    <string name="empty_view_subtitle_text">Get Started by Adding a Book</string>
    <string name="edit_activity_title_existing_book">Edit Pet</string>
    <string name="editor_update_prod_failed">Failed to Update the current product</string>
    <string name="editor_update_prod_successful">Product successfully updated!</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="catalog_delete_all_prod_confirmation">This action will erase all the products</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="catalog_error_deleting">Error Deleting</string>
    <string name="catalog_delete_successful">Deleted</string>
    <string name="editor_info_miss_msg">Some information is missing</string>
    <string name="stock_hint">in stock</string>
    <string name="price_buy_hint">BUY £0.0</string>
    <string name="buy_pound">BUY £</string>
    <string name="no_books_snackbar_del_msg">There are no books to delete</string>
    <string name="dummyData_bookname">Quiet - The Power of Introverts</string>
    <string name="dummyData_suppName">Amazon</string>
    <string name="in_stock_status">IN  STOCK</string>
    <string name="out_of_stock_status">OUT OF STOCK</string>
    <string name="outOfStock_message">This Book is OUT OF STOCK</string>
</resources>
